style.css
:root {
    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
    line-height: 1.5;
    font-weight: 400;

    color-scheme: light dark;
    --text-color: #000;
    --text-color-secondary: #64748b;
    --background-color-primary: #ffffff;
    --background-color-secondary: #ffffff;
    --hover-color: #f1f3f5;
    --border: 1px solid #dee2e6;
    --icon-color: rgba(0, 0, 0, 0.6);
    --home-icon-bg: #dfbef3;

    --table-header-color: #f1f5f9;
    --modal-gray: #f8f9fa;

    font-synthesis: none;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

[data-theme="dark"] {
    --text-color: #ffffff;
    --text-color-secondary: #f8f9fa;
    --background-color-primary: #383544;
    --background-color-secondary: #484554;
    --border: 1px solid #484848;
    --icon-color: rgba(255, 255, 255, 0.4);
    --table-header-color: #6a6676;
    --modal-gray: #ada9bb;
    --home-icon-bg: #8576FF;


    --hover-color: #ced4da;
    --link-color: #ff8c00;
}

html {
    margin: 0;
    padding: 0;
}

body {
    margin: 0;
    background-color: var(--background-color-primary);
    color: var(--text-color);
    display: flex;
}

/* Sidebar basic styles */
.sidebar {
    flex-basis: 20%;
    height: 100vh;
    background-color: var(--background-color-secondary);
    border-right: var(--border);
    transition: width 0.5s ease; /* Smooth transition for collapse/expand */
    padding: 0 8px;
}

.sidebar.collapsed {
    flex-basis: 60px; /* Width when collapsed */
    overflow: hidden;
    min-width: 60px;
}

.logo-box {
    color: #2563EB;
    background-color: #fff;
    padding: 10px;
    font-weight: 600;
    border: 1px dashed #2563EB;
    background-color: #93C5FD;
}

.logo-box.icon-collapsed {
    width: 100%;
}

.nav-box {
    display: none;
    justify-content: space-between;
    align-items: center;
    padding: 20px 15px;
}

.nav-box span {
    color: #2563EB;
    background-color: #fff;
    padding: 10px;
    font-weight: 600;
    border: 1px dashed #2563EB;
    background-color: #93C5FD;
}

.nav-box button {
    display: none;
    font-size: 24px;
    font-weight: 600;
    color: #000;
    background-color: #ded9d9;
    height: 32px;
    width: 32px;
    border: none;
    border-radius: 100%;
    /* display: flex; */
    justify-content: center;
    align-items: center;
}

.menu-icon {
    display: none;
}

/* Menu styles */
.menu {
    list-style: none;
    padding: 0;
    /* margin-top: 10px; */
}

.menu-item {
    display: flex;
    align-items: center;
    padding: 10px 15px;
    cursor: pointer;
    opacity: 1;
    transition: opacity 0.3s ease; /* Transition for opacity */
}

/* .menu-item img {
    margin-bottom: -10px;
} */

/* Transitions for the icons and text */
.menu-item .text {
    white-space: nowrap;
    margin-left: 25px;
    margin-right: auto;
    transition: opacity 0.3s ease, transform 0.3s ease;
}

.text-icon {
    font-size: 12px;
    width: 22px;
    height: 22px;
    color: #fff;
    background-color: #f03e3e;
    border-radius: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

/* Avatar name & email */
.icon {
    display: flex;
    gap: 20px;
}
.icon-text {
    display: flex;
    flex-direction: column;
    font-weight: 500;
    font-size: 14px;
}

/* Hide the text and extended icons when collapsed */
.sidebar.collapsed .menu-item .text {
    opacity: 0;
    transform: translateX(-20px); /* Slide text out on collapse */
    pointer-events: none; /* Disable interaction when hidden */
}

.menu-item .icon-collapsed {
    display: none;
    opacity: 0;
    transition: opacity 0.3s ease; /* Smooth transition for icon opacity */
}

.menu-item .icon-extended {
    opacity: 1;
    transition: opacity 0.3s ease; /* Smooth transition for icon opacity */
    display: flex;
    align-items: center;
}

/* When collapsed, show the collapsed icons and hide the extended ones */
.sidebar.collapsed .menu-item .icon-extended {
    display: none;
    opacity: 0;
}

.sidebar.collapsed .menu-item .icon-collapsed {
    display: inline;
    opacity: 1;
}

/* Add hover effects */
.menu-item:not(:nth-child(1)):hover {
    background-color: var(--hover-color);
}

.menu-item:nth-child(2), .menu-item:nth-child(2):hover {
    background-color: var(--home-icon-bg);
}

/* Toggle button */

.switch {
    position: relative;
    display: inline-block;
    width: 30px;
    height: 17px;
}

.switch input {
    opacity: 0;
    width: 0;
    height: 0;
}

.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    -webkit-transition: 0.4s;
    transition: 0.4s;
}

.slider:before {
    position: absolute;
    content: "";
    height: 13px;
    width: 13px;
    left: 2px;
    bottom: 2px;
    background-color: white;
    -webkit-transition: 0.4s;
    transition: 0.4s;
}

input:checked + .slider {
    background-color: #8576ff;
}

input:focus + .slider {
    box-shadow: 0 0 1px #8576ff;
}

input:checked + .slider:before {
    -webkit-transform: translateX(13px);
    -ms-transform: translateX(13px);
    transform: translateX(13px);
}

/* Rounded sliders */
.slider.round {
    border-radius: 34px;
}

.slider.round:before {
    border-radius: 50%;
}

/* MAIN CONTENT */
main {
    padding: 40px 60px;
    flex: 1;
    max-width: 1280px;
    margin: 0 auto;
}

main h1 {
    font-weight: 400;
}

main h2 {
    font-weight: 500;
    margin: 30px 0 10px 0;
}

.metric-container {
    display: flex;
    gap: 16px;
}

.metric-card {
    flex: 1;
    display: flex;
    flex-direction: column;
    gap: 5px;
    background-color: var(--background-color-secondary);
    border: var(--border);
    border-radius: 2px;
    padding: 20px 15px;
    /* box-shadow: 0 0 2px rgba(0, 0, 0, 0.2); */
}

.metric-card__heading {
    color: var(--text-color-secondary);
    display: flex;
    align-items: center;
    gap: 10px;
}
/* ... */

